--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "./build_files.sh",
   "builds": [
     {
       "src": "project/wsgi.py",
@@ -8,6 +9,10 @@
         "maxLambdaSize": "15mb",
         "runtime": "python3.9"
       }
+    },
+    {
+      "src": "staticfiles/**",  
+      "use": "@vercel/static"  
     }
   ],
   "routes": [
@@ -20,5 +25,7 @@
       "dest": "project/wsgi.py"
     }
   ],
-  "buildCommand": "./build_files.sh"
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "project.settings"
+  }
 }
